# leidenalg.jl

./: .gitmodules  CondaPkg.toml  Project.toml  README.md  install.jl  install.sh  pyproject.toml
src/: CMakeLists.txt  Leiden.jl  leiden.py  pythoncall.jl  wrapper.cpp
test/: adj.tsv  adj.tsv.jl  leiden.py  test.sh  test_leiden.jl  test_leiden.py  test_leiden.py.txt
